syntax = "proto3";

package purpose.template.v2;

enum PurposeTemplateStateV2 {
  DRAFT = 0;
  ACTIVE = 1;
  SUSPENDED = 2;
  ARCHIVED = 3;
}

// TODO: the purpose template is not final
message PurposeTemplateV2 {
  string id = 1;
  string name = 2;
  string target = 3;
  string creatorId = 4;
  string eserviceId = 5;
  string descriptorId = 6;
  PurposeTemplateStateV2 state = 7;
  string title = 8;
  string description = 9;
  optional PurposeRiskAnalysisFormTemplateV2 riskAnalysisForm = 10;
  int64 createdAt = 11;
  optional int64 updatedAt = 12;
  bool isFreeOfCharge = 13;
  optional string freeOfChargeReason = 14;
  optional int32 dailyCalls = 15;
}

// TODO: move the risk analysis template to a separate file if it's needed
message PurposeRiskAnalysisFormTemplateV2 {
  string id = 1;
  string version = 2;
  repeated RiskAnalysisTemplateSingleAnswerV2 singleAnswers = 3;
  repeated RiskAnalysisTemplateMultiAnswerV2 multiAnswers = 4;
}

message RiskAnalysisTemplateSingleAnswerV2 {
  string id = 1;
  string key = 2;
  optional string value = 3;
  bool editable = 4;
  optional RiskAnalysisTemplateAnswerAnnotationV2 annotation = 5;
}

message RiskAnalysisTemplateMultiAnswerV2 {
  string id = 1;
  string key = 2;
  repeated string values = 3;
  bool editable = 4;
  optional RiskAnalysisTemplateAnswerAnnotationV2 annotation = 5;
}

message RiskAnalysisTemplateAnswerAnnotationV2 {
  string id = 1;
  string text = 2;
  repeated RiskAnalysisTemplateAnnotationDocumentV2 docs = 3;
  repeated LinkV2 urls = 4;
}

message RiskAnalysisTemplateAnnotationDocumentV2 {
  string id = 1;
  string name = 2;
  string contentType = 3;
  string prettyName = 4;
  string path = 5;
  string checksum = 6;
  int64 uploadDate = 7;
}

message LinkV2 {
  string url = 1;
  string name = 2;
}
